<resources>

<!--     <string name="app_name">Stopwatch</string> -->
<!--     <string name="hello_world">Hello world!</string> -->
<!--     <string name="menu_settings">Settings</string> -->
<!--     <string name="title_activity_stopwatch">Stopwatch</string> -->
    
    <string name="app_name">Task Manager</string>
    <string name="timer">00:00:00</string>
    <string name="timerMs">:00</string>
    <string name="startText">start</string>
    <string name="resetText">reset</string>
    <string name="stopText">stop</string>
    <string name="backgroundText">Stopwatch</string>
    <string name="adsText">Ads Go Here</string>
    <string name="menu_settings">Settings</string>
    <string name="taskTitle">Title</string>
    <string name="taskDescr">Description</string>
    <string name="task">Enter a Task</string>
    <string name="create">Create</string>
    <string name="stopwatchBack">background of stopwatch</string>
    <string name="splash_text">Garth Fritz</string>
    <string name="splash_button">Tap Here!</string>
    

</resources>

