<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
		<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:id="@+id/parentFrameLayout">
			<ImageView
			android:src="@drawable/background"
			android:scaleType="fitXY"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/backgroundImageView">
			</ImageView>
			<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/linearLayout">
				<LinearLayout
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:id="@+id/timerBackground"
				android:background="@drawable/timerbackground">

					<TextView
					    android:id="@+id/timer"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:gravity="center"
					    android:text="@string/timer"
					    android:textColor="#004254"
					    android:textSize="60sp" >

					</TextView>

					<TextView
					    android:id="@+id/timerMs"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:gravity="right"
					    android:text="@string/timerMs"
					    android:textColor="#004254"
					    android:textSize="20sp" >

					</TextView>
				</LinearLayout>
				
				<!--Begin Button Linear Layout -->
				<LinearLayout
				android:orientation="horizontal"
				android:layout_gravity="center_horizontal"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:background="@drawable/buttonarea">
					<Button
					android:layout_marginLeft="5dp"
					android:layout_marginRight="5dp"
					android:background="@drawable/stopbuttonstates"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_weight="1"
					android:textColor="#7A1100"
					android:shadowColor="#DF726E"
					android:text="@string/stopText"
					android:id="@+id/stopButton"
					android:visibility="gone"
					android:onClick="stopClick">
					</Button>
					<Button
					android:layout_marginLeft="5dp"
					android:background="@drawable/startbuttonstates"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:textColor="#5F3A00"
					android:shadowColor="#FBEBC5"
					android:layout_weight="1"
					android:text="@string/startText"
					android:id="@+id/startButton"
					android:onClick="startClick">
					</Button>
					<Button
					android:layout_marginRight="5dp"
					android:background="@drawable/resetbuttonstates"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_weight="1"
					android:textColor="#2E2E2E"
					android:shadowColor="#959597"
					android:text="@string/resetText"
					android:id="@+id/resetButton"
					android:onClick="resetClick">
					</Button>
				</LinearLayout>
				<!--End Button Linear Layout -->
				
				<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal">
					<ImageView
					android:src="@drawable/hline"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_marginTop="20dp"
					android:layout_marginBottom="10dp"
					android:layout_width="wrap_content">
					</ImageView>
				</LinearLayout>
				<ScrollView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:id="@+id/scrollView">

					<TextView
					    android:id="@+id/backgroundText"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:text="@string/backgroundText" >

					</TextView>
				</ScrollView>
			</LinearLayout>
		</FrameLayout>
		<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true" >
			<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="#000000">
				<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/adsText">
				</TextView>
			</LinearLayout>
		</RelativeLayout>
	</RelativeLayout>